PROJECT(donk)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_EXECUTABLE(donk donk.cpp)
ADD_SUBDIRECTORY(thirdparty/glfw)
ADD_SUBDIRECTORY(thirdparty/gl3w)
ADD_DEPENDENCIES(donk gl3w)
INCLUDE_DIRECTORIES(thirdparty/glfw/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/thirdparty/gl3w/include)
INCLUDE_DIRECTORIES(thirdparty/khronos)
TARGET_LINK_LIBRARIES(donk glfw ${GLFW_LIBRARIES})